Added a custom validator that ensures the user is not attempting to overwrite an existing path

--- a/app/views/exstatic/pages/new.html.erb
+++ b/app/views/exstatic/pages/new.html.erb
@@ -5,6 +5,14 @@
     <%= f.text_field :title %>
   </div>
   <div>
+    <%= f.label :slug %>
+    <%= f.text_field :slug %>
+  </div>
+  <div>
+    <%= f.label :content %>
+    <%= f.text_field :content %>
+  </div>
+  <div>
     <%= f.submit %>
   </div>
 <% end %>
