--- a/app/views/exstatic/pages/new.html.erb
+++ b/app/views/exstatic/pages/new.html.erb
@@ -1,3 +1,18 @@
+<div id="errors_container" class="<%= @page.errors.count > 0 ? "" : "hidden" %> <%= @page.class.name.downcase %>_errors">
+  <h2>
+    <% if defined? heading %>
+      <%= t(heading) %>
+    <% else %>
+      <%= t(:save_error) %>
+    <% end %>
+  </h2>
+  <ul id="errors">
+  <% @page.errors.full_messages.each do |msg| %>
+    <li><%= msg %></li>
+  <% end %>
+  </ul>
+</div>
+
 <h1>Create a Page</h1>
 <%= form_for @page do |f| %>
   <div>
